releasing version 0.6