@@ -5,7 +5,7 @@
 
     <groupId>io.github.chengenzhao</groupId>
     <artifactId>fxcity</artifactId>
-    <version>0.5.11</version>
+    <version>0.6</version>
     <name>fxcity</name>
     <description>JavaFX, FXGL, AtlantaFX extension project. Providing useful tools based on our game-dev experiences.
     </description>
@@ -23,6 +23,19 @@
         <connection>scm:git:https://github.com/chengenzhao/fxcity.git</connection>
         <url>https://github.com/chengenzhao/fxcity</url>
     </scm>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>25</source>
+                    <target>25</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <developers>
         <developer>
@@ -39,7 +52,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <fxgl.version>21.1</fxgl.version>
         <javafx.version>26-ea+3</javafx.version>
-        <jackson.version>2.19.0</jackson.version>
+        <jackson.version>2.19.2</jackson.version>
         <atlantafx.version>2.0.1</atlantafx.version>
         <junit.jupiter.version>5.12.2</junit.jupiter.version>
 <!--        <junit.platform.version>1.9.2</junit.platform.version>-->
